2008-03-28  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-parser.[ch]
	* app/dialogs/tips-dialog.c: improved the creation of fallback
	tips in case of an error parsing the tips file.
	(tips_dialog_create): simplified dialog layout.
	
	* app/dialogs/preferences-dialog.c: removed the check button for
	the "show-tips" option.

2008-03-28  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.dtd
	* data/tips/gimp-tips.xml.in
	* app/dialogs/tips-parser.[ch]: reverted some of the changes from
	yesterday. The simplification went too far and we inadvertently
	lost an important feature.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c (load_image): changed message to say
	"Unsupported maximum value" instead of "Invalid maximum value"
	as suggested in bug #149723.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.dtd
	* data/tips/gimp-tips.xml.in: simplified the gimp-tips XML format
	as we do not any longer need a special welcome tip.

	* app/dialogs/tips-dialog.c
	* app/dialogs/tips-parser.[ch]: changed accordingly.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: removed SHOW_TIPS_BLURB.

2008-03-27  Sven Neumann  <sven@gimp.org>

	Preparing for a revamp of the "Tip of the Day" feature:

	* app/config/gimpguiconfig.[ch]: removed "show-tips" property.

	* app/gui/gui.[ch]: removed gui_post_init() as it's only purpose was
	to show the tips dialog.

	* app/app.c: changed accordingly.

	* app/dialogs/tips-dialog.c: removed some stuff that we are not
	going to need any longer.
	
2008-03-27  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.c: minor improvements to the API docs.

2008-03-27  Sven Neumann  <sven@gimp.org>

	Properly pass the focus from the core to plug-in dialogs:

	* libgimpbase/gimpprotocol.[ch]: added a user_time member to the
	GimpConfig struct. Bumped the protocol version to 0x0012.

	* app/core/gimp-gui.[ch]
	* app/gui/gui-vtable.c: added gimp_get_user_time() to get the